fix contrast on form input placeholders

--- a/web/wp-content/themes/lfevents/src/assets/scss/components/_forms.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/components/_forms.scss
@@ -78,6 +78,10 @@ div.hs_recaptcha,
     display: block;
     margin-right: 8px;
   }
+
+  ::placeholder {
+    color: #757575;
+  }
 }
 
 .hbspt-form .submitted-message {
